--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@types/next-auth": "^3.15.0",
+    "axios": "^1.6.2",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
     "@types/node": "^20",
